fixed horizontal scroll

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,10 @@
 body {
     background-size: cover;
-    height:100%
+    height:100%;
+}
+
+html, body {
+    overflow-x: hidden;
 }
 
 h1 {
@@ -14,7 +18,7 @@ hr {
 
 .mainContainer {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-image: url("/images/background.svg");
     background-size: cover;
 }
